[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapemaster"
version = "0.1.0"
description = "A dynamic web scraping library with advanced NLP capabilities."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { name = "Yonatan Levin", email = "levinjonatan80@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
keywords = ["web scraping", "nlp", "spaCy", "asyncio", "aiohttp"]
dependencies = [
    "aiohttp>=3.7.4",
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.2",
    "spacy>=3.0.0",
    "textblob>=0.15.3",
    "transformers>=4.2.0",
    "pandas>=1.1.5",
    "playwright>=1.48.0"
]

[project.urls]
"Documentation" = "https://github.com/yonatan-levin/retry#readme"
"Source" = "https://github.com/yonatan-levin/retry"
"Tracker" = "https://github.com/yonatan-levin/retry/issues"

[tool.setuptools.packages.find]
where = ["scrapemaster"]
exclude = ["tests*", "examples*"]

[project.optional-dependencies]
nlp = ["spacy", "textblob", "transformers", "pytest-asyncio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"